doc(architecture): update build

--- a/docs/config.json
+++ b/docs/config.json
@@ -1,1 +1,1 @@
-{"productVersion":"","productWebUrl":"./api-docs.html","productId":"adoc","stage":"release","downloadTitle":"Get API Docs","keymaps":{},"searchMaxHits":75,"productName":"API Docs"}
+{"productVersion":"","productWebUrl":"./introduction.html","productId":"adoc","stage":"release","downloadTitle":"Get Documentation","keymaps":{},"searchMaxHits":75,"productName":"Documentation"}
